syntax = "proto3";
package common;

// root_guid: guid of the root msg which trigger the current req
message CommonReqInfo {
    string guid = 1;
    int64 timestamp = 2;
    string version = 3;
    string tenant_id = 4;
    string user_id = 5;
    string robot_id = 6;
    string robot_type = 7;
    string service_code = 8;
    string seq = 9;
    string root_guid = 10;
}

message CommonReqHeader {
    string tenant_id = 4;
    string user_id = 5;
    string robot_id = 6;
    string robot_type = 7;
    string service_code = 8;
    string seq = 9;
}

message CommonRspInfo {
    int32 err_code = 1;
    string err_msg = 2;
    string err_detail = 3;
}

message Extra {
    string extra_type = 1;
    string extra_body = 2;
}

message CommonDataBody {
    bytes data = 1;
    map<string, string> param = 2;
    string data_type = 3;
    int64 time_stamp = 4;
    Extra extra = 5;
}
